Fix alignment of table data

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,11 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.header {
+.table-header {
     font-weight: 900;
+    padding-right: 53px;
+}
+
+.reorder-align {
+    padding-right: 40px;
 }
